--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,24 @@ ul{
     padding: 0px;
     margin: 0px;
 }
+@import url('https://fonts.cdnfonts.com/css/b-bagian');
+@import url('https://fonts.cdnfonts.com/css/wannabeme');
+@import url('https://fonts.cdnfonts.com/css/rogan');
+                
+  
+.bg-video{
+    position:fixed;
+    object-fit: cover;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+}
+.main-container{
+    position: relative;
+    text-align: center;
+}
 .nav-bar{
     /* width: 95%; */
     display: flex;
@@ -13,16 +31,72 @@ ul{
     display: flex;
     justify-content:space-between;
     gap: 25px;
-    margin-top: 3%;
+    margin-top: 2%;
     margin-right: 4%;
+    font-size: large;
 }
 .nav-items li{
     list-style: none;
+}
+.nav-items li a{
+    text-decoration: none;
     margin: 0px;
     padding: 0px;
+    color: #fff;
+}
+.nav-items li a:hover{
+    color: orange;
 }
 .button{
     width: 67%;
-    height: 42%;
-    padding: 2%;
+    height: 26%;
+    padding: 3% 6% 2% 6%;
+    border-radius: 6px;
+    text-decoration: none;
+    background-color:#006FF9;
+    color: #fff;
+}
+.button:hover{
+    background-color: orange;
+}
+   /*main-banner section */
+.main-banner{
+    height: 500px;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 6%;
+}
+.form-button{
+    border-radius: 5px;
+    background-color: #006FF9;
+    padding: 0.8% 1.4% 0.8% 1.4%;
+}
+.form-button:hover{
+    background-color: orange;
+}
+.form-button a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.banner-text h1{
+    color:#fff;
+    font-size: 96px;
+    font-family: 'b Bagian', sans-serif;
+    font-weight: 400;
+}
+.banner-text h3{
+    color: #fff;
+    font-size: 39px;
+    font-weight: 110;
+    font-family: 'WANNABEME', sans-serif;
+}
+.banner-text p{
+    color: #fff;
+    font-size: 24px;
+    font-weight: 600;
+    font-family: 'Rogan', sans-serif;
 }
