--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,17 @@ ul{
     padding: 0px;
     margin: 0px;
 }
+body{
+    margin: 0px;
+    padding: 0px
+}
 @import url('https://fonts.cdnfonts.com/css/b-bagian');
 @import url('https://fonts.cdnfonts.com/css/wannabeme');
 @import url('https://fonts.cdnfonts.com/css/rogan');
                 
   
 .bg-video{
-    position:fixed;
+    position:absolute;
     object-fit: cover;
     right: 0;
     bottom: 0;
@@ -101,4 +105,22 @@ ul{
     font-size: 24px;
     font-weight: 600;
     font-family: 'Rogan', sans-serif;
+}
+
+                 /* About */
+            
+.about-container{
+    display: flex;
+    justify-content: space-around;
+    height: 95vh;
+}
+.about{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* margin-left: 6%; */
+}
+.about-img img{
+    width: 598px;
+    height: 488px;
 }
