--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@ body{
     width: 100%;
     height: 100%;
 }
+.scratch-img{
+    position: relative;
+    bottom: 25px;
+    width: 100%;
+}
 .main-container{
     position: relative;
     text-align: center;
@@ -118,9 +123,86 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* margin-left: 6%; */
+    margin-bottom: 3%;
 }
 .about-img img{
-    width: 598px;
-    height: 488px;
+    width: 662px;
+    height: 524px;
+}
+.about h3{
+    font-size: 40px;
+    font-family: 'b Bagian', sans-serif;
+    font-weight: 300;
+}
+.about h4{
+    font-size: 20px;
+    font-family: 'WANNABEME', sans-serif;
+    font-weight: 200;
+}
+.about p{
+    font-size: 20px;
+    font-family: 'Rogan', sans-serif;
+    font-weight: 100;
+}
+
+           /* expedition */
+
+.expedition{
+    height: 90vh;
+    position: relative;
+}
+.expedition-img{
+    position: absolute;
+    width: 520px;
+    height: 1024px;
+    bottom: 30px;
+    left: -30px;
+    z-index: -1;
+}
+.expedition-heading{
+    text-align: center;
+    line-height: 7px;
+}
+.expedition-heading h3{
+    font-size: 38px;
+    font-weight: 100;
+    font-family: 'b Bagian', sans-serif;
+}
+.expedition-heading p{
+    font-size: 19px;
+    font-weight: 100;
+    font-family: 'Rogan', sans-serif;
+}
+
+.Trips{
+    padding: 80px 0px 140px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 100px;
+}
+
+.Trips div {
+    width: 108px;
+    height: 112px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border: 1px solid transparent;
+    border-radius: 6px;
+}
+.Trips div p{
+    font-family: 'Rogan', sans-serif;
+    font-weight: 200;
+    font-size: 14px;
+    letter-spacing: 2px;
+}
+.Trips div:hover{
+    color: #FFA509;
+    border-color: #FFA509;
+}
+.Trips div img{
+    width: 49px;
 }
