--- a/css/style.css
+++ b/css/style.css
@@ -148,14 +148,14 @@ body{
            /* expedition */
 
 .expedition{
-    height: 90vh;
+    height: 60vh;
     position: relative;
 }
 .expedition-img{
     position: absolute;
     width: 520px;
     height: 1024px;
-    bottom: 30px;
+    bottom: -190px;
     left: -30px;
     z-index: -1;
 }
@@ -205,4 +205,31 @@ body{
 }
 .Trips div img{
     width: 49px;
+}
+
+
+   /* expedition-imgs */
+
+.expedition-imgs{
+    height: 90vh;
+}   
+.card-row-tripdetails{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.card-flex{
+    display: flex;
+    align-items: center;
+    gap: 60px;
+}
+.card-sec-p{
+    width: 97px;
+    height: 30px;
+    margin: 0px;
+    border: 1px solid transparent;
+    background-color: rgba(255, 165, 9, 0.5);
+    text-align: center;
+    border-radius: 5px;
 }
