--- a/css/style.css
+++ b/css/style.css
@@ -222,14 +222,33 @@ body{
 .card-flex{
     display: flex;
     align-items: center;
-    gap: 60px;
+    gap: 20px;
+}
+.card-flex h5{
+    font-size: 20px;
+    font-weight: 400;
+    font-family: 'Rogan', sans-serif;
 }
 .card-sec-p{
     width: 97px;
     height: 30px;
     margin: 0px;
+    font-family: 'Rogan', sans-serif;
+    font-size: 18px;
+    font-weight: 300;
     border: 1px solid transparent;
     background-color: rgba(255, 165, 9, 0.5);
     text-align: center;
     border-radius: 5px;
+}
+.card-dtls{
+    width: 340px;
+    display: flex;
+    justify-content: space-between;
+}
+.card-dtls-rght ,.card-dtls-left{
+    display: flex;
+}
+.icons{
+    width: 16px;
 }
