--- a/css/style.css
+++ b/css/style.css
@@ -215,14 +215,16 @@ body{
 }   
 .card-row-tripdetails{
     width: 100%;
+    height: 60vh;
     display: flex;
     justify-content: center;
-    gap: 10px;
+    gap: 25px;
 }
 .card-flex{
     display: flex;
+    justify-content: space-around;
     align-items: center;
-    gap: 20px;
+    /* gap: 20px; */
 }
 .card-flex h5{
     font-size: 20px;
@@ -231,8 +233,21 @@ body{
 }
 .card-sec-p{
     width: 97px;
-    height: 30px;
+    height: 25px;
     margin: 0px;
+    margin-bottom: 17px;
+    font-family: 'Rogan', sans-serif;
+    font-size: 18px;
+    font-weight: 300;
+    border: 1px solid transparent;
+    background-color: rgba(255, 165, 9, 0.5);
+    text-align: center;
+    border-radius: 5px;
+}
+.card-sec-p-3{
+    width: 97px;
+    height: 25px;
+    margin-left: 130px;
     font-family: 'Rogan', sans-serif;
     font-size: 18px;
     font-weight: 300;
@@ -251,4 +266,27 @@ body{
 }
 .icons{
     width: 16px;
+}
+
+.trip-button{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+}
+.trip-button a{
+    padding: 9px;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    text-decoration: none;
+    background-color: #006FF9;
+    color: #fff;
+}
+.trip-button a:hover{
+    background-color: #FFA509;
+}
+.first-img{
+    
 }
