--- a/css/style.css
+++ b/css/style.css
@@ -302,16 +302,19 @@ body{
 /* GALLERY */
 .gallery{
     width: 100%;
-    height: 120vh;
+    height: 140vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-image: url("../images/dark-bg.png");
 }
-.gallery .gallery-head , .gallery-p{
+.gallery .gallery-head , .gallery-p {
     color: #fff;
     text-align: center;
 }
 .gallery-head{
     margin: 0;
-    padding: 98px 0 0 0;
+    /* padding: 98px 0 0 0; */
     font-size: 40px;
     font-weight: 100;
     letter-spacing: 2px;
@@ -322,18 +325,53 @@ body{
     font-weight: 100;
     font-family: 'Rogan', sans-serif;
 }
-/* .gallery-imgs{
-    display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    grid-template-rows: 2fr 1fr;
-    grid-template-areas: 
-    "gallery-first-img gallery-second-img gallery-third-img"
-    "gallery-first-img gallery-forth-img";
-} */
 .gallery-imgs{
-    width: 100%;
-    display: flex;
-    text-align: center;
-    /* gap: 5px; */
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px;
+  width: 100%;
+  max-width: 1200px;
+}
+.items{
+    overflow: hidden;
+    border-radius: 20px;
+}
+.items img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}   
+
+.item-one {
+  grid-row: 1 / 3;     
+  grid-column: 1 / 2;
+}
+
+.item-two{
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+.item-three {
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
+}
+
+.item-four {
+  grid-column: 2 / 4;   
+  grid-row: 2 / 3;
+}
+
+.gallery-button{
+    width: 5%;
+    height: 3%;
+    padding: 2% 3% 2% 3%;
     justify-content: center;
+    border-radius: 6px;
+    background-color:#006FF9;
+}
+.gallery-button a{
+    text-decoration: none;
+    color: #fff;
 }
